--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,36 @@
 <!doctype html>
-<html lang="en">
+<html>
 
 <head>
   <meta charset="utf-8">
-  <title>AngularReddit</title>
+  <title>Angular2Reddit</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.css">
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.js"></script>
+
 </head>
 
 <body>
-  <app-root></app-root>
+  <!-- Menu Bar -->
+  <div class="ui menu">
+    <div class="ui container">
+      <a href="#" class="header item">
+        <img class="logo" src="/assets/images/ng-book-2-minibook.png">
+        ng-book 2
+      </a>
+      <div class="header item borderless">
+        <h1 class="ui header">
+          Angular Simple Reddit
+        </h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="ui main text container">
+    <app-root>Loading </app-root>
+    <!-- Our app loads here! -->
+  </div>
 </body>
 
 </html>
